[package]
name = "rustytodo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
adw = { version = ">= 0.3.1", package = "libadwaita", features = ["v1_4"] }
anyhow = "1.0"
ashpd = { version = "0.6.2", features = ["gtk4"] }
async-channel = "2.0"
dirs = "5.0"
gtk = { version = "*", package = "gtk4", features = ["v4_12"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.33.0", features = ["rt-multi-thread"] }
walkdir = "2.3"
xshell = "0.2"

[build-dependencies]
glib-build-tools = "0.18"